Sat Nov 23 12:33:58 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltInternals.h: Alexey Efimov reported a portability
	  problem when compiling on HP-UX

Sat Nov 23 12:23:32 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/generator.py python/libxslt.c: fixes for compiling
	  without config.h

Thu Nov 21 18:51:29 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixed bug #99168 select evaluating to
	  a node list check

Thu Nov 21 15:12:33 CET 2002 Daniel Veillard <daniel@veillard.com>

	* tests/documents/result.xhtml: the XHTML1 serialization change
	  to libxml2 modifies slightly the result of that test.

Mon Nov 18 11:38:46 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: the python bindings requires libxml2 >= 2.4.25
	  for the regexp stuff.

Mon Nov 18 10:09:06 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: similar patch to #98825 for --with-python

Sun Nov 17 22:06:59 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fix bug #98793 on clash of imported global
	  variables.
	* tests/reports/tst-1.err: this changes the output of that test

Sun Nov 17 18:12:20 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.23
	* doc/*: rebuilding the docs

Sat Nov 16 23:23:41 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/libxslt.c: make sure to register EXSLT for the bindings
	* python/tests/Makefile.am python/tests/exslt.py: add a specific test
	* xsltproc/xsltproc.c: minor cleanup

Fri Nov 15 12:35:57 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am python/tests/Makefile.am: trying to fix #98518
	  when building outside of the source tree

Thu Nov 14 21:39:37 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/generator.py: xpathObjectRet() pertains to the libxml2
	  module, add the namespace.

Thu Nov 14 18:48:00 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libxslt/win32config.h: cleanup